# tui_for_learn

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  ui.rs
src/components/: c_rect.rs  exit.rs  give_up.rs  mod.rs  nav.rs  rect_at.rs  status.rs
src/components/status_bars/: course_help.rs  login_help.rs  mod.rs  movement.rs  timetabel_help.rs
src/db/: courses.json  superDatabase.json  users.json
src/pages/: courses.rs  home.rs  login.rs  mod.rs  timetable.rs
src/util/: db.rs  handlers.rs  helper_functions.rs  mod.rs  types.rs
