[package]
name = "tui_for_learn"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.27.0", features = ["serde"] }
ratatui = "0.28.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
thiserror = "1.0.60"
